--- a/src/scroller.css
+++ b/src/scroller.css
@@ -2,11 +2,11 @@
   position: relative;
   width: 100%;
   overflow: hidden;
-  height: 100%;
+  height: 50vh;
+  min-height: 200px;
   flex: 1;
   display: flex;
   flex-flow: column;
-  min-height: 50vh;
   background: rgba(255, 255, 255, 0.1);
   align-items: center;
 }
