--- a/src/scroller.css
+++ b/src/scroller.css
@@ -10,7 +10,7 @@
   background: rgba(255, 255, 255, 0.1);
   align-items: center;
 }
-.scroller-wrapper .scroller {
+.scroller-wrapper .scroller, .scroller-wrapper .scroller-fullscreen {
   width: 100%;
   max-width: 1280px;
   flex: 1;
@@ -20,9 +20,6 @@
   display: flex;
   scrollbar-width: none !important;
 }
-.scroller-wrapper .scroller::-webkit-scrollbar {
-  display: none;
-}
 .scroller-wrapper .slide {
   min-width: 100%;
   flex: 1;
@@ -31,12 +28,15 @@
   background-size: cover;
   background-position: center;
 }
-.scroller-wrapper .slide .caption {
+.scroller-wrapper .caption, .scroller-wrapper i {
   margin: 1rem;
   display: inline-block;
   color: white;
   mix-blend-mode: exclusion;
   text-shadow: 0 0 3px black;
+}
+.scroller-wrapper .scroller::-webkit-scrollbar {
+  display: none;
 }
 .scroller-wrapper .dots-container {
   width: 100%;
@@ -47,7 +47,7 @@
   justify-content: center;
   background: black;
 }
-.scroller-wrapper .dot {
+.scroller-wrapper .dots-container .dot {
   width: 0.5rem;
   height: 0.5rem;
   background: white;
@@ -55,8 +55,35 @@
   border-radius: 50%;
   transition: opacity 0.1s ease-in-out;
 }
-.scroller-wrapper .selected {
+.scroller-wrapper .dots-container .selected {
   opacity: 0.75;
+}
+.scroller-wrapper .scroller-fullscreen {
+  max-width: 100vw;
+  display: none;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  height: 100vh;
+}
+.scroller-wrapper .scroller-fullscreen .cover {
+  background: black;
+  position: inherit;
+  width: inherit;
+  height: inherit;
+}
+.scroller-wrapper .scroller-fullscreen .slide {
+  min-height: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.scroller-wrapper .scroller-fullscreen i {
+  font-size: 2rem;
+  z-index: 101;
+  position: fixed;
+  right: 0;
+  top: 0;
 }
 
 @media (prefers-color-scheme: light) {
